2008-03-26 Fix SVG backend bug that prevents copying and pasting in
           Inkscape (thanks Kaushik Ghose) - MGD

2008-03-23 Fix a pdf backend bug which sometimes caused the outermost
           gsave to not be balanced with a grestore. - JKS

2008-02-29 Fix class Wx toolbar pan and zoom functions (Thanks Jeff
           Peery) - MGD

2008-02-16 Added some new rec array functionality to mlab
           (rec_summarize, rec2txt and rec_groupby).  See
           examples/rec_groupby_demo.py.  Thanks to Tim M for rec2txt.

2008-02-11 Update plotting() doc string to refer to getp/setp. - JKS

2008-02-01 Fix doubly-included font problem in Postscript backend - MGD

2008-02-01 Fix reference leak in ft2font Glyph objects. - MGD

2008-01-31 Don't use unicode strings with usetex by default - DSD

2008-01-31 Fix text spacing problems in PDF backend with *some* fonts,
           such as STIXGeneral.

2008-01-31 Fix \sqrt with radical number (broken by making [ and ]
           work below) - MGD

2008-01-10 Fix bug displaying [ and ] in mathtext - MGD

2008-01-10 Fix bug when displaying a tick value offset with scientific
           notation. (Manifests itself as a warning that the \times
           symbol can not be found). - MGD

2008-01-10 Use setup.cfg to set the default parameters (tkagg,
           numpy) when building windows installers - DSD

===============================================================
2008-01-06 Released 0.91.2 at revision 4802

2007-12-26 Reduce too-late use of matplotlib.use() to a warning
           instead of an exception, for backwards compatibility - EF

2007-12-25 Fix bug in errorbar, identified by Noriko Minakawa - EF

2007-12-25 Changed masked array importing to work with the upcoming
           numpy 1.05 (now the maskedarray branch) as well as with
           earlier versions. - EF

2007-12-16 rec2csv saves doubles without losing precision. Also, it
           does not close filehandles passed in open. - JDH,ADS
